--- a/configs/appsettings.Development.json
+++ b/configs/appsettings.Development.json
@@ -8,5 +8,17 @@
     },
     "httpServer": {
         "port":8080
+    },
+    "rabbitMQ": {
+        "brokerAddress": "amqp://localhost:5003",
+        "produceTimeout": 1,
+        "produceQueue": "StockResponses",
+        "consumeQueue": "PlacedOrders"
+    },
+    "messageRelay": {
+        "cycleTime": 10
+    },
+    "log": {
+        "path":""
     }
 }
