--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,7 @@ services:
     ports:
       - 5432:5432
     networks:
-      - dev
-      
+      - dev   
    redis:
     image: redis:6.2
     container_name: redis
@@ -67,7 +66,25 @@ services:
      retries: 5
     networks:
       - dev
-    
+   varnish:
+    image: varnish
+    container_name: varnish
+    ports:
+      - 7070:80
+    volumes:
+      - ./varnish.vcl:/etc/varnish/default.vcl
+    networks:
+      - dev
+   nginx:
+    image: nginx:latest
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./certs:/etc/nginx/certs
+    ports:
+      - 5001:443
+    restart: always 
+    networks:
+      - dev
 networks:
   dev:
     driver: bridge 
